added service for customer module. Integrated Angular with springboot API to fetch and update customer info in database from admin module'

--- a/src/app/admin-customer-manager/admin-customer-manager.component.html
+++ b/src/app/admin-customer-manager/admin-customer-manager.component.html
@@ -108,7 +108,7 @@
           <td>
             <select name="Authorize" id="#" [(ngModel)]="cust.approval">
               <option selected="selected" value=""></option>
-              <option value="approve">approve</option>
+              <option value="activate">activate</option>
               <option value="block">block</option>
               </select> &nbsp;&nbsp;
               <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)='updateStatus(cust, customer)'>Submit</button>
