--- a/src/app/customer-home/customer-home.component.html
+++ b/src/app/customer-home/customer-home.component.html
@@ -16,78 +16,156 @@
 </head>
 
 <style>
-    .logo {
-      height: 100px;
-      padding-right: 15px;
-      padding-left: 5px;
-    }
-  </style>
+  .logo {
+    height: 100px;
+    padding-right: 15px;
+    padding-left: 5px;
+  }
+</style>
 
 <body>
-<!--********Menu bar start*******-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" routerLink="/customerlogin" href="#"><img src='../../assets/img/logo.PNG'
-          class="img-responsive logo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <!--********Menu bar start*******-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" routerLink="/customerlogin" href="#"><img src='../../assets/img/logo.PNG'
+        class="img-responsive logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link text-secondary" routerLink="/customerlogin" href="#"><b>Home </b><span
-                class="sr-only">(current)</span></a>
-          </li>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link text-secondary" routerLink="/customerlogin" href="#"><b>Home </b><span
+              class="sr-only">(current)</span></a>
+        </li>
 
-          <li class="nav-item active">
-            <a class="nav-link text-dark" href="#" routerLink='/customeraccountspage'>Accounts</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link text-dark" href="#" routerLink='/customerbillpaymentspage'>BillPayments</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link text-dark" href="#" routerLink='/customertransferpage'>Transfers</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link text-dark" href="#" routerLink='/customerchequebookrequest'>ChequeBookRequest</a>
-          </li>
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>AccountDetails</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="#" routerLink='/customertransactionhistory'>Transaction History</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="#" routerLink='/customerwithdrawal'>Withdrawals</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="#" routerLink='/customerdeposit'>Deposits</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="#" routerLink='/customermoneytransfer'>Money Transfers</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link text-dark" href="#" routerLink='/customerchequebookrequest'>ChequeBook Requests</a>
+        </li>
 
 
-          
 
-        </ul>
+
+      </ul>
     </div>
 
-    </nav>
+  </nav>
   <!--********Menu bar end*******-->
 
+  <div class="mt-5"></div>
+
+  <div class="container">
+    <div class="row ">
+      <div class="col">
+        <div class="card" style="width: 25rem;">
+          <img class="card-img-top" src="../../assets/img/AccountSummary.PNG" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Account Details</h5>
+            <p class="card-text"> This page shows current balance information for all of your accounts.</p>
+            <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to view Account Details</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card" style="width: 25rem;">
+          <img class="card-img-top" src="../../assets/img/TransactionHistory.PNG" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Transaction History</h5>
+            <p class="card-text">The page shows information about deposits, withdrawals, inbound and outbound transfers
+              and internal transfers</p>
+            <a href="#" class="btn btn-secondary" routerLink='/customertransactionhistory'>Click to view Transaction
+              History</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br><br>
+
+    <div class="container">
+      <div class="row ">
+
+        <div class="col">
+          <div class="card" style="width: 25rem;">
+            <img class="card-img-top" src="../../assets/img/BillPaymentHistory.PNG" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Withdrawals</h5>
+              <p class="card-text"> This page is to withdraw money</p>
+              <a href="#" class="btn btn-secondary" routerLink='/customerwithdrawal'>Click to Withdraw money</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card" style="width: 25rem;">
+            <img class="card-img-top" src="../../assets/img/BillPayment.PNG" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Deposits</h5>
+              <p class="card-text"> This page is to deposit money</p>
+              <a href="#" class="btn btn-secondary" routerLink='/customerdeposit'>Click to Deposit money</a>
+            </div>
+          </div>
+        </div>
+
+        <br><br>
+        <div class="container">
+          <div class="row ">
+
+            <div class="col">
+              <div class="card" style="width: 25rem;">
+                <img class="card-img-top" src="../../assets/img/TransferFunds.PNG" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Money Transfers</h5>
+                  <p class="card-text"> This page is to transfer funds</p>
+                  <a href="#" class="btn btn-secondary" routerLink='/customermoneytransfer'>Click to Transfer
+                    Funds</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card" style="width: 25rem;">
+                <img class="card-img-top" src="../../assets/img/ChequeBookAuth.PNG" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Chequebook Request</h5>
+                  <p class="card-text"> This page is to chequebook request</p>
+                  <a href="#" class="btn btn-secondary" routerLink='/customerchequebookrequest'>Click to
+                    request checkbook</a>
+                </div>
+              </div>
+            </div>
 
 
 
 
 
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-  crossorigin="anonymous"></script>
-
-</body>
-
-<div class="mt-5"></div>
-
-</html>
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+              integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+              crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+              integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+              crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+              integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+              crossorigin="anonymous"></script>
 
 
-
-
-
-
+            <div class="mt-5"></div>
