--- a/src/app/customer-login/customer-login.component.html
+++ b/src/app/customer-login/customer-login.component.html
@@ -55,19 +55,20 @@
           <div class="mt-3"></div>
           <div class="form-group">
 
-            <input class="form-control" type="text" id="username" name="username" 
-              placeholder="Bank card number">
+            <input class="form-control" type="text" id="username" name="username" [(ngModel)]="users.Username"
+              placeholder="Username">
           </div>
           <div class="form-group">
 
-            <input class="form-control" type="password" id="password" name="password" 
+            <input class="form-control" type="password" id="password" name="password" [(ngModel)]="users.Password"
               placeholder="Password">
           </div>
           
+          <h6 class="text-danger" *ngIf='invalidLogin'>{{errorMessage}}</h6>
           
           <div class = "row">
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg">Login to Online Banking</button>
+            <button type="submit" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Login to Online Banking</button>
           </div>
 
           <div class="col-md-6 text-center">
