--- a/src/app/customer-login/customer-login.component.html
+++ b/src/app/customer-login/customer-login.component.html
@@ -72,7 +72,7 @@
           </div>
 
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg">Update Password</button>
+            <button type="submit" class="btn btn-secondary btn-lg" (click)=updatePassword(users)>Update Password</button>
           </div>
         </div>
 
