--- a/src/app/customer-update-password/customer-update-password.component.html
+++ b/src/app/customer-update-password/customer-update-password.component.html
@@ -55,27 +55,28 @@
           <div class="mt-3"></div>
           <div class="form-group">
 
-            <input class="form-control" type="text" id="username" name="username" 
+            <input class="form-control" type="text" id="username" name="username" value = {{username}}
               readonly>
           </div>
           <div class="form-group">
-            <input class="form-control" type="password" name="password" 
+            <input class="form-control" type="password" name="password" [(ngModel)]="users.Newpassword"
               placeholder="New Password">
           </div>
 
           <div class="form-group">
-            <input class="form-control" type="password" name="password" 
+            <input class="form-control" type="password" name="password" [(ngModel)]="users.Repeatpassword"
               placeholder="Repeat New Password">
           </div>
 
+          <h6 class="text-danger" *ngIf='Passwordnotmatch'>{{errorMessage}}</h6>
         
           <div class = "row">
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" >Update Password</button>
+            <button type="submit" class="btn btn-secondary btn-lg" (click)="updatePassword(users)">Update Password</button>
           </div>
 
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" >Back to Login Page</button>
+            <button type="submit" class="btn btn-secondary btn-lg" (click)="logout()">Back to Login Page</button>
           </div>
         </div>
 
