--- a/src/app/customer-registration/customer-registration.component.html
+++ b/src/app/customer-registration/customer-registration.component.html
@@ -62,13 +62,61 @@
     </nav>
   <!--********Menu bar end*******-->
 
+  <form>
+
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-md-6 mt-5 table-bordered ">
+          <h5>Register</h5>
+
+          <div class="mt-3"></div>
+
+          <!--<small class="form-text text-muted">Access the portal to view account details, update profile, view sales orders and more</small>-->
+          <div class="mt-3"></div>
+          <div class="form-group">
+
+            <input class="form-control" type="text" id="accountnumber" name="accountnumber" [(ngModel)]="users.Accountnumber"
+              placeholder="Accountnumer">
+          </div>
+          <div class="form-group">
+
+            <input class="form-control" type="password" id="pinnumber" name="pinnumber" [(ngModel)]="users.Pinnumber"
+              placeholder="Pinnumber">
+          </div>
+          
+          <h6 class="text-danger" *ngIf='invalidLogin'>{{errorMessage}}</h6>
+          
+          <div class = "row">
+          <div class="col-md-6 text-center">
+            <button type="submit" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Proceed to setup login </button>
+          </div>
+
+        </div>
+
+        <div class="mt-3"></div>
+
+      
+
+          <div class="mt-3"></div>
+        </div>
+     
+
+      </div>
+    </div>
+
+    \
+  
+    <br><br><br><br><br>
+
+  </form>
 
 
 
 
 
-
-<!-- Optional JavaScript -->
+<!-- Optional JavaScript (click)=handleLogin(users)-->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
