--- a/src/app/customer-login/customer-login.component.html
+++ b/src/app/customer-login/customer-login.component.html
@@ -65,6 +65,7 @@
           </div>
           
           <h6 class="text-danger" *ngIf='invalidLogin'>{{errorMessage}}</h6>
+          <h6 class="text-danger" *ngIf='accountInactive'>{{Message}}</h6>
           
           <div class = "row">
           <div class="col-md-6 text-center">
