--- a/src/app/customer-accountdetails/customer-accountdetails.component.html
+++ b/src/app/customer-accountdetails/customer-accountdetails.component.html
@@ -87,9 +87,35 @@
       <tbody>
         <tr *ngFor="let account of customeraccounts">
 
-        <td>{{account.accountnumber}}</td>
-        <td>{{account.accounttype}}</td>
-       
+          <td>{{account.accountnumber}}</td>
+          <td>{{account.accounttype}}</td>
+
+          <td>
+            &nbsp;&nbsp;
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)=transactionhistory(account)
+            >Transaction History</button>
+          </td>
+
+          <td>
+            &nbsp;&nbsp;
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Withdrawals</button>
+          </td>
+
+          <td>
+            &nbsp;&nbsp;
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Deposits</button>
+          </td>
+
+          <td>
+            &nbsp;&nbsp;
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Money Transfers</button>
+          </td>
+
+          <td>
+          &nbsp;&nbsp;
+          <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Cheque Requests</button>
+          </td>
+
 
         </tr>
 
@@ -101,17 +127,16 @@
 
 
   <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-              integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-              crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-              integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-              crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-              integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-              crossorigin="anonymous"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
 
-            <div class="mt-5"></div>
-           
+  <div class="mt-5"></div>
