added cheque request page for customer to be able to submit cheque book requests

--- a/src/app/customer-accountdetails/customer-accountdetails.component.html
+++ b/src/app/customer-accountdetails/customer-accountdetails.component.html
@@ -98,22 +98,22 @@
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Withdrawals</button>
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)=withdrawal(account)>Withdrawals</button>
           </td>
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Deposits</button>
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)=deposit(account)>Deposits</button>
           </td>
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Money Transfers</button>
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)=moneytransfer(account)>Money Transfers</button>
           </td>
 
           <td>
           &nbsp;&nbsp;
-          <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit">Cheque Requests</button>
+          <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)=chequerequest(account)>Cheque Requests</button>
           </td>
 
 
