added funtionality for customer to be able to withdraw and deposit money

--- a/src/app/customer-accountdetails/customer-accountdetails.component.html
+++ b/src/app/customer-accountdetails/customer-accountdetails.component.html
@@ -81,6 +81,7 @@
         <tr>
           <th scope="col">Account Number</th>
           <th scope="col">Account Type</th>
+          <th scope="col">Total Amount</th>
         </tr>
       </thead>
 
@@ -89,6 +90,7 @@
 
           <td>{{account.accountnumber}}</td>
           <td>{{account.accounttype}}</td>
+          <td>{{account.totalamount}}</td>
 
           <td>
             &nbsp;&nbsp;
