--- a/src/app/customer-withdrawal/customer-withdrawal.component.html
+++ b/src/app/customer-withdrawal/customer-withdrawal.component.html
@@ -2,107 +2,107 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!--Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
 </head>
 
 <style>
-  .logo {
-    height: 100px;
-    padding-right: 15px;
-    padding-left: 5px;
-  }
+    .logo {
+        height: 100px;
+        padding-right: 15px;
+        padding-left: 5px;
+    }
 </style>
 
 <body>
-  <!--********Menu bar start*******-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/customerlogin" href="#"><img src='../../assets/img/logo.PNG'
-        class="img-responsive logo"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <!--********Menu bar start*******-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" routerLink="/customerlogin" href="#"><img src='../../assets/img/logo.PNG'
+                class="img-responsive logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link text-secondary" routerLink="/customerlogin" href="#"><b>Home </b><span
-              class="sr-only">(current)</span></a>
-        </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-secondary" routerLink="/customerlogin" href="#"><b>Home </b><span
+                            class="sr-only">(current)</span></a>
+                </li>
 
-        <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>AccountDetails</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customertransactionhistory'>Transaction History</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customerwithdrawal'>Withdrawals</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customerdeposit'>Deposits</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customermoneytransfer'>Money Transfers</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customerchequebookrequest'>ChequeBook Requests</a>
-        </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>AccountDetails</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#" routerLink='/customertransactionhistory'>Transaction
+                        History</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#" routerLink='/customerwithdrawal'>Withdrawals</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#" routerLink='/customerdeposit'>Deposits</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#" routerLink='/customermoneytransfer'>Money Transfers</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#" routerLink='/customerchequebookrequest'>ChequeBook
+                        Requests</a>
+                </li>
 
 
 
 
-      </ul>
-    </div>
+            </ul>
+        </div>
 
-  </nav>
-  <!--********Menu bar end*******-->
+    </nav>
+    <!--********Menu bar end*******-->
 
-  <div class="mt-5"></div>
+    <div class="mt-5"></div>
 
-  <form class="form-inline my-2 my-lg-0">
-      <h3><a class="nav-link text-secondary">Customer Portal - Withdrawals</a></h3>
-  </form>
-  <br>
- 
+    <form class="form-inline my-2 my-lg-0">
+        <h3><a class="nav-link text-secondary">Customer Portal - Withdrawals</a></h3>
+    </form>
+    <br>
+
     <div class="container">
 
-      <div class="row">
+        <div class="row">
 
-        <div class="col-md-6 mt-5 table-bordered ">
-          <h5></h5>
-
-         
-
-          <!--<small class="form-text text-muted">Access the portal to view account details, update profile, view sales orders and more</small>-->
-        
-          <div class="form-group">
-
-            <div class="form-group">
-                <input class="form-control" type="withdrawalamount" name="withdrawalamount" 
-                  placeholder="Enter amount to withdraw">
-              </div>
-         
-
-            <button type="submit" class="btn btn-secondary " 
-            >Withdraw Amount</button>
+            <div class="col-md-6 mt-5 table-bordered ">
+                <h5></h5>
 
 
+
+                <!--<small class="form-text text-muted">Access the portal to view account details, update profile, view sales orders and more</small>-->
+
+                <div class="form-group">
+
+                    <div class="form-group">
+                        <input class="form-control" type="withdrawalamount" name="withdrawalamount"
+                            placeholder="Enter amount to withdraw" [(ngModel)]="withdrawals.transamount">
+                    </div>
+
+
+                    <button type="submit" class="btn btn-secondary " (click)='createtransaction(withdrawals.transamount); updateaccountbyid()'>Withdraw Amount</button>
+
+
+                </div>
+
+            </div>
         </div>
-        <!--form column ends  routerLink = "/adminhome" (click)='createChequerequest(chequerequests.chequetype)' [(ngModel)]="users.Newpassword"-->
-
-      </div>
-    </div>
     </div>
 
 
@@ -111,23 +111,23 @@
 
 
 
-  <br><br><br><br><br>
+    <br><br><br><br><br>
 
 
 
 
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-  crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 
-<div class="mt-5"></div>
+    <div class="mt-5"></div>
